--- a/index.html
+++ b/index.html
@@ -5,277 +5,124 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proposal for Partnership</title>
     <style>
-        /* General Reset */
-        * {
+        body {
             margin: 0;
             padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
-            color: gold; /* Black text for the body */
-            margin: 0;
-            background: url('Oil well of life.webp') no-repeat center center fixed;
+            background: url('your-background-image.jpg') no-repeat center center fixed;
             background-size: cover;
+            color: gold;
+            line-height: 1.6;
         }
-
-        .landing-page {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
             padding: 20px;
-        }
-
-        .content {
-            max-width: 900px;
-            text-align: left;
-            background: rgba(0, 0, 0, 0.6); /* Transparent black background */
             border-radius: 8px;
-            padding: 20px;
+            box-sizing: border-box; /* Ensures padding doesn't affect width */
         }
-
         h1, h2, h3 {
-            color: gold; /* Gold color for headings */
+            color: gold;
+            text-align: center; /* Center-align headers */
         }
-
-        h1 {
-            font-size: 2.5rem;
-            margin-bottom: 1rem;
+        p, ul, li {
+            margin-bottom: 16px;
+            text-align: justify; /* Justify text for better readability */
         }
-
-        h2 {
-            font-size: 2rem;
-            margin-top: 1.5rem;
-            margin-bottom: 1rem;
-        }
-
-        h3 {
-            font-size: 1.5rem;
-            margin-top: 1rem;
-            margin-bottom: 0.5rem;
-        }
-
-        p {
-            font-size: 1rem;
-            margin-bottom: 1rem;
-        }
-
-        ul {
-            margin: 1rem 0;
-            padding-left: 20px;
-        }
-
-        ul li {
-            margin-bottom: 0.5rem;
-        }
-
         a {
             color: gold;
-            text-decoration: none;
-        }
-
-        a:hover {
             text-decoration: underline;
         }
-
-        .cta-button {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 15px 30px;
-            font-size: 1rem;
-            font-weight: bold;
-            text-decoration: none;
-            color: #fff;
-            background: #007bff;
-            border-radius: 5px;
-            transition: background 0.3s ease;
+        a:hover {
+            color: lightyellow;
         }
-
-        .cta-button:hover {
-            background: #0056b3;
-        }
-
-        /* Responsive Design */
-        @media (max-width: 768px) {
-            h1 {
-                font-size: 2rem;
+        @media (max-width: 600px) {
+            .container {
+                margin: 10px; /* Reduce side margins for small screens */
+                padding: 15px; /* Adjust padding for mobile */
+                font-size: 14px; /* Make text slightly smaller on mobile */
             }
-
-            h2 {
-                font-size: 1.75rem;
-            }
-
-            p, ul li {
-                font-size: 0.9rem;
-            }
-
-            .content {
-                padding: 15px;
-            }
-        }
-
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 1.5rem;
-            }
-
-            h2 {
-                font-size: 1.5rem;
-            }
-
-            p, ul li {
-                font-size: 0.8rem;
-            }
-
-            .content {
-                padding: 10px;
-            }
-
-            .cta-button {
-                font-size: 0.8rem;
-                padding: 10px 20px;
+            h1, h2, h3 {
+                font-size: 18px; /* Scale headers for smaller screens */
             }
         }
     </style>
 </head>
 <body>
-    <div class="landing-page">
-        <div class="content">
-            <h1>Proposal for Partnership: Advancing the Kingdom of God Through Generosity</h1>
-            
-            <h2>Introduction: Partnering in the Mission of the Kingdom</h2>
-            <p>This proposal outlines an opportunity for you to partner in an innovative program that aligns with the teachings of Jesus and the mission of the Kingdom of God. By embracing the principles of sowing and reaping, this initiative empowers participants to experience financial freedom, deepen their faith, and transform communities.</p>
-            <p>At the core of this program is the power of generosity. Participants sow a one-time donation of <strong>$1,222</strong>, reaping <strong>90% of subsequent donations</strong> generated through their affiliate links. This model not only fosters financial independence but also drives Kingdom-focused initiatives that restore families, communities, and dreams.</p>
-            
-            <h2>Program Overview: The Generosity Model</h2>
-            <h3>How It Works</h3>
-            <ul>
-                <li><strong>$1,222 Initial Donation</strong>: Participants commit to a one-time donation, symbolizing faith in God's provision and a desire to invest in Kingdom-building efforts.</li>
-                <li><strong>90% Reaping</strong>:
+    <div class="container">
+        <h1>Proposal for Partnership: Advancing the Kingdom of God Through Generosity</h1>
+        <h2>A Transformational Opportunity</h2>
+        <p>
+            This proposal outlines an opportunity for you to partner in an innovative program that aligns with the teachings of Jesus and the mission of the Kingdom of God. By embracing the principles of sowing and reaping, this initiative empowers participants to experience financial freedom, deepen their faith, and transform communities.
+        </p>
+        <p>
+            At the core of this program is the power of generosity. Participants sow a one-time donation of $1,222, reaping 90% of subsequent donations generated through their affiliate links. This model not only fosters financial independence but also drives Kingdom-focused initiatives that restore families, communities, and dreams.
+        </p>
+
+        <h2>Program Overview: The Generosity Model</h2>
+
+        <h3>How It Works</h3>
+        <ul>
+            <li>
+                <strong>$1,222 Initial Donation:</strong> Participants commit to a one-time donation, symbolizing faith in God's provision and a desire to invest in Kingdom-building efforts.
+            </li>
+            <li>
+                <strong>90% Reaping:</strong>
+                <ul>
+                    <li>Participants earn 90% of every subsequent $1,222 donation made through their unique affiliate link.</li>
+                    <li>This creates a system of financial freedom, breaking the cycle of the "daily grind" and empowering individuals to focus on their God-given callings.</li>
+                </ul>
+            </li>
+            <li>
+                <strong>10% Kingdom Allocation:</strong>
+                <ul>
+                    <li><strong>9% for the Kingdom Mission ("Son of Man" Belief System):</strong> Dedicated to advancing a vision rooted in the teachings of Jesus to:</li>
                     <ul>
-                        <li>Participants earn 90% of every subsequent $1,222 donation made through their unique affiliate link.</li>
-                        <li>This creates a system of financial freedom, breaking the cycle of the "daily grind" and empowering individuals to focus on their God-given callings.</li>
+                        <li>Restore families to love and purpose.</li>
+                        <li>Reduce poverty and isolation.</li>
+                        <li>Create thriving, Spirit-filled communities where dreams are reignited and lives are transformed.</li>
                     </ul>
-                </li>
-                <li><strong>10% Kingdom Allocation</strong>:
-                    <ul>
-                        <li><strong>9% for the Kingdom Mission ("Son of Man" Belief System)</strong>: Dedicated to advancing a vision rooted in the teachings of Jesus.</li>
-                        <li><strong>1% for Cody Haskins</strong>: Stewarded to ensure continued growth and global impact through Holy Spirit-empowered generosity.</li>
-                    </ul>
-                </li>
-            </ul>
+                    <li><strong>1% for Cody Haskins:</strong> As the co-creator with God of this initiative, I, Cody Haskins, will steward this portion to ensure the continued growth and refinement, to make a global impact with Holy Spirit empowered generosity.</li>
+                </ul>
+            </li>
+        </ul>
 
-            <h2>Impact of the 90% Donation Reaping Model</h2>
-            <h3>Breaking Free from the Workweek Grind</h3>
-            <p>Participants who engage in the program experience a shift from the toil of earning money through time-bound labor to financial freedom rooted in Kingdom principles. By sowing into this program:</p>
+        <h2>Impact of the 90% Donation Reaping Model</h2>
+        <h3>Breaking Free from the Workweek Grind</h3>
+        <p>Participants who engage in the program experience a shift from the toil of earning money through time-bound labor to financial freedom rooted in Kingdom principles. By sowing into this program:</p>
+        <ul>
+            <li><strong>Financial Freedom:</strong> The 90% reaping allows participants to create passive income streams, enabling them to:</li>
             <ul>
-                <li><strong>Financial Freedom:</strong> The 90% reaping allows participants to create passive income streams, enabling them to:
-                    <ul>
-                        <li>Spend more time with family.</li>
-                        <li>Invest in their spiritual growth.</li>
-                        <li>Pursue God’s calling for their lives.</li>
-                    </ul>
-                </li>
-                <li><strong>Community Empowerment:</strong> With increased financial resources, participants can:
-                    <ul>
-                        <li>Support local ministries and outreach programs.</li>
-                        <li>Become conduits of generosity in their communities.</li>
-                        <li>Establish businesses or initiatives that align with Kingdom values.</li>
-                    </ul>
-                </li>
+                <li>Spend more time with family.</li>
+                <li>Invest in their spiritual growth.</li>
+                <li>Pursue God’s calling for their lives.</li>
             </ul>
-
-            <h3>Community Transformation through the Kingdom Mission</h3>
-            <p>The 9% allocation for the "Son of Man" belief system fuels participating Churches boldly to:</p>
+            <li><strong>Community Empowerment:</strong> With increased financial resources, participants can:</li>
             <ul>
-                <li><strong>Restore Families:</strong>
-                    <ul>
-                        <li>Provide counseling and support to families in crisis.</li>
-                        <li>Offer resources to strengthen marriages and parent-child relationships.</li>
-                    </ul>
-                </li>
-                <li><strong>Reduce Poverty:</strong>
-                    <ul>
-                        <li>Fund skills training and small business creation.</li>
-                        <li>Support programs that address root causes of poverty.</li>
-                    </ul>
-                </li>
-                <li><strong>Create Thriving Communities:</strong>
-                    <ul>
-                        <li>Establish centers for mentorship, education, and spiritual growth.</li>
-                        <li>Build networks of Spirit-filled believers who serve as light and salt in their communities.</li>
-                    </ul>
-                </li>
-                <li><strong>Inspire Dreams and Freedom:</strong>
-                    <ul>
-                        <li>Empower individuals to pursue their God-given visions without financial constraints.</li>
-                        <li>Break the chains of hopelessness and inspire confidence in God's provision.</li>
-                    </ul>
-                </li>
+                <li>Support local ministries and outreach programs.</li>
+                <li>Become conduits of generosity in their communities.</li>
+                <li>Establish businesses or initiatives that align with Kingdom values.</li>
             </ul>
+        </ul>
 
-            <h2>Biblical Foundation for Generosity and Impact</h2>
-            <p>This initiative is grounded in the expressed image of Jesus and the principles of the Kingdom of God:</p>
-            <ul>
-                <li><strong>"The Kingdom of Heaven is like a mustard seed... Though it is the smallest of all seeds, when it grows, it is the largest of garden plants and becomes a tree, so that the birds come and perch in its branches." (Matthew 13:31-32)</strong></li>
-                <li><strong>"Freely you have received; freely give." (Matthew 10:8)</strong></li>
-                <li><strong>"The Son of Man came not to be served, but to serve, and to give his life as a ransom for many." (Matthew 20:28)</strong></li>
-            </ul>
-            <p>This program invites participants to embody Jesus by sowing generously and reaping abundantly, all while serving as co-laborers in advancing the Kingdom of God.</p>
+        <h2>Call to Action: Partner with Us to Advance the Kingdom</h2>
+        <p>NOW, this is your opportunity to join a movement that aligns with Jesus’ mission to proclaim the gospel, restore lives, and bring freedom. Together, we can:</p>
+        <ul>
+            <li>Empower your friends, family, and community to live out Kingdom principles of giving and reaping.</li>
+            <li>Transform communities by addressing poverty, restoring families, and inspiring dreams.</li>
+            <li>Expand God’s Kingdom through sustainable generosity and faith-driven initiatives.</li>
+        </ul>
+        <p><strong>"The Kingdom of God is at hand." (Mark 1:15)</strong></p>
+        <p>Will you partner with us to sow into the vision of Jesus and reap a harvest that brings life, freedom, and transformation to the world?</p>
 
-            <h2>Projected Reach and Community Impact</h2>
-            <h3>Christian Population</h3>
-            <p><strong>Target Demographic:</strong> ~500 million Christians across the U.S. and Europe. Reaching 0.5% (2.5 million individuals) at $1,222 generates $3 billion in donations.</p>
-
-            <h3>Affiliate Model</h3>
-            <p>Participants sharing their affiliate links with just 30 people generate:</p>
-            <pre>
-30 x $1,222 x 90% = $32,994 per participant. "30, 60, and 100fold" Mark 4:20
-            </pre>
-            <p>This revenue empowers individuals to reinvest in their communities, ministries, and dreams.</p>
-
-            <h3>Community Impact Breakdown</h3>
-            <p>$3 billion raised through 0.5% of the demographic:</p>
-            <ul>
-                <li>$2.7 billion (90%) distributed to participants.</li>
-                <li>$270 million (9%) fuels Kingdom mission projects.</li>
-                <li>$30 million (1%) supports Holy Spirit generosity stewardship and expansion.</li>
-            </ul>
-
-            <h2>Scalability and Growth Strategy</h2>
-            <h3>SEO-Driven Growth</h3>
-            <p>A high-performance SEO bot ensures affiliate links remain visible and competitive, driving traffic and conversions across online platforms. By optimizing keywords for Christian giving and passive income seekers, the program reaches diverse demographics effectively.</p>
-
-            <h3>Global Expansion</h3>
-            <ul>
-                <li>Phase 1: Target the U.S. and Europe.</li>
-                <li>Phase 2: Expand to other regions, including Africa, Asia, and South America, to foster global Kingdom impact.</li>
-            </ul>
-
-            <h2>Call to Action: Partner with Us to Advance the Kingdom</h2>
-            <p>NOW, this is your opportunity to join a movement that aligns with Jesus’ mission to proclaim the gospel, restore lives, and bring freedom. Together, we can:</p>
-            <ul>
-                <li>Empower your friends, family, and community to live out Kingdom principles of giving and reaping.</li>
-                <li>Transform communities by addressing poverty, restoring families, and inspiring dreams.</li>
-                <li>Expand God’s Kingdom through sustainable generosity and faith-driven initiatives.</li>
-            </ul>
-            <p>"The Kingdom of God is at hand." (Mark 1:15)</p>
-            <p>Will you partner with us to sow into the vision of Jesus and reap a harvest that brings life, freedom, and transformation to the world?</p>
-
-            <p>Let us labor together for the glory of God and the joy of His people.</p>
-
-            <h2>Next Steps</h2>
-            <ul>
-                <li>Schedule a meeting to discuss implementation with me, Cody Haskins, at <a href="mailto:rpareapercody@gmail.com">rpareapercody@gmail.com</a> and title the subject "Spirit of Generosity".</li>
-                <li>Review financial projections and impact models based on your influence/Church congregants.</li>
-                <li>Commit to launching this program as a Kingdom partner.</li>
-            </ul>
-            <p>Together, we can transform lives and communities, declaring: “Behold, I am making all things new.” (Revelation 21:5)</p>
-        </div>
+        <h2>Next Steps</h2>
+        <ul>
+            <li>Schedule a meeting to discuss implementation with me, Cody Haskins, at <a href="mailto:rpareapercody@gmail.com">rpareapercody@gmail.com</a> and title the subject "Spirit of Generosity".</li>
+            <li>Review financial projections and impact models based on your influence/Church congregants.</li>
+            <li>Commit to launching this program as a Kingdom partner.</li>
+        </ul>
+        <p><strong>Together, we can transform lives and communities, declaring: “Behold, I am making all things new.” (Revelation 21:5)</strong></p>
     </div>
 </body>
 </html>
-
