--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         The PMA protects the rights of members by providing a framework that allows for voluntary membership and participation. The benefits of being part of this program are outlined in the membership guidelines, and members are encouraged to share their experiences and testimonies in a spirit of unity and empowerment.
     </p>
     <p>
-        As part of the PMA, all donations and contributions are voluntary and are governed by the shared beliefs and mutual agreement of the members. The program ensures that all resources are allocated according to the principles of sowing and reaping, with a focus on supporting the Kingdom mission and furthering the work of Jesus Christ through financial freedom and empowerment.
+        As part of the PMA, all donations and contributions are voluntary and are governed by the Holy Spirit and the co-creators of this God given vision. The program ensures that all resources are allocated according to the principles of sowing and reaping, with a focus on supporting the Kingdom mission and furthering the work of Jesus Christ through financial freedom and empowerment.
     </p>
     <p>
         Your participation in ABBA's Kingdom Donation Program is your declaration of faith in the Kingdom's principles of generosity, multiplication, and the spreading of the love of Jesus. By contributing, you become part of a movement that seeks to impact both believers and non-believers alike, providing opportunities for financial independence and spiritual transformation.
