--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
     <h3>Affiliate Model</h3>
     <p>Participants sharing their affiliate links with just 30 people generate:</p>
     <p><strong>30 x $1,222 x 90% = $32,994 per participant.</strong></p>
-    <p>This revenue empowers individuals to reinvest in their communities, ministries, and dreams.</p>
+    <p>This revenue empowers individuals to reinvest in their communities, ministries, and dreams. Matthew 13:23 “Now the one sown on the good soil, this is the one who hears the word and understands. He indeed bears fruit, yielding a hundredfold, some sixty, some thirty times what was sown.”</p>
 
     <h3>Community Impact Breakdown</h3>
     <p>$3 billion raised through 0.5% of the demographic:</p>
