--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </ul>
     <h2>Projected Reach and Community Impact</h2>
     <h3>Christian Population</h3>
-    <p>Target Demographic: ~500 million Christians across the U.S. and Europe. Reaching 0.5% (2.5 million individuals) at $1,222 generates $3 billion in donations.</p>
+    <p>Just 1 of the targeted Demographics: ~500 million Christians across the U.S. and Europe. Reaching 0.5% (2.5 million individuals) at $1,222 generates $3 billion in donations.</p>
 
     <h3>Affiliate Model</h3>
     <p>Participants sharing their affiliate links with just 30 people generate:</p>
