--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         The PMA protects the rights of members by providing a framework that allows for voluntary membership and participation. The benefits of being part of this program are outlined in the membership guidelines, and members are encouraged to share their experiences and testimonies in a spirit of unity and empowerment.
     </p>
     <p>
-        As part of the PMA, all donations and contributions are voluntary and are governed by the Holy Spirit and the co-creators of this God given vision. The program ensures that all resources are allocated according to the principles of sowing and reaping, with a focus on supporting the Kingdom mission and furthering the work of Jesus Christ through financial freedom and empowerment.
+        As part of the PMA, all donations and contributions are voluntary and are governed by ABBA, our Father in Heaven, and the co-creators of this Holy Spirit inspired vision. The program ensures that all resources are allocated according to the principles of sowing and reaping, with a focus on supporting the Kingdom mission and furthering the work of Jesus Christ through financial freedom and empowerment.
     </p>
     <p>
         Your participation in ABBA's Kingdom Donation Program is your declaration of faith in the Kingdom's principles of generosity, multiplication, and the spreading of the love of Jesus. By contributing, you become part of a movement that seeks to impact both believers and non-believers alike, providing opportunities for financial independence and spiritual transformation.
@@ -162,7 +162,7 @@
     <p>ABBA's Kingdom Donation Program is designed to grow exponentially, expanding as new members join and participate in the affiliate system. The key growth elements include:</p>
     <ul>
         <li><strong>Referral System:</strong> A powerful, Holy Spirit-driven referral model where members invite others to join, sharing the message of Jesus and empowering each other.</li>
-        <li><strong>Incentives for Growth:</strong> Spirit-led incentives will be given to individuals who actively expand their network, with bonuses based on the number of new people they introduce to the program.</li>
+        <li><strong>Incentives for Growth:</strong> Spirit-led incentives will be given to individuals who actively expand their network, with bonuses based on Holy Spirit-led generosity, as the reach grows the co-creators desire to pay off houses, cars, college tuition, back child support, etc...</li>
         <li><strong>Building Partnerships:</strong> Partnerships with churches and Kingdom-focused organizations will increase awareness and promote active participation.</li>
         <li><strong>Global Outreach:</strong> Expanding the reach of the program internationally, allowing individuals in countries around the world to be part of the Kingdom mission.</li>
     </ul>
