--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <p>
             Are you ready to take the next step in your Kingdom journey? Join us today and experience the empowerment of ABBA's Kingdom Donation Program, where financial freedom and spiritual transformation meet.
         </p>
-        <a href="https://abbaskingdomprogram.com/join-now" class="cta-button">Join Now & Be Part of the Kingdom Mission</a>
+        <a href="https://lifeabundantly.github.io/kingdom-affiliate-impact/" class="cta-button">Join Now & Be Part of the Kingdom Mission</a>
     </div>
 </body>
 </html>
