--- a/index.html
+++ b/index.html
@@ -229,11 +229,13 @@
     <p>
         Together, we will build a Kingdom where the poor are lifted, the broken are healed, and the glory of Jesus is revealed. Will you join us?
     </p>
+    <a href="https://examplelink.com/donate" class="cta-button">Join the Movement Today</a>
     <footer>
         <p>© 2024 ABBA’s Kingdom Donation Program | All Rights Reserved</p>
         <p><em>This program is part of a Private Membership Association (PMA). For more information, please visit the PMA guidelines.</em></p>
     </footer>
 </body>
 </html>
+
 
 
