--- a/index.html
+++ b/index.html
@@ -229,7 +229,9 @@
     <p>
         Together, we will build a Kingdom where the poor are lifted, the broken are healed, and the glory of Jesus is revealed. Will you join us?
     </p>
-    <a href="https://lifeabundantly.github.io/kingdom-affiliate-impact/" class="cta-button">Join the Movement Today</a>                                               <a href="https://www.amazon.com/ABBA-FromTomb-Table-Seated-Apostles-Doctrine-ebook/dp/B0DS1G36ZP">The Apostles Doctrine Revealed</a>
+    <a href="https://lifeabundantly.github.io/kingdom-affiliate-impact/" class="cta-button">Join the Movement Today</a>  
+       
+        <a href="https://www.amazon.com/ABBA-FromTomb-Table-Seated-Apostles-Doctrine-ebook/dp/B0DS1G36ZP">The Apostles Doctrine Revealed</a>
     <footer>
         <p>© 2024 ABBA’s Kingdom Donation Program | All Rights Reserved</p>
         <p><em>This program is part of a Private Membership Association (PMA). For more information, please visit the PMA guidelines.</em></p>
